chore(build): Use Java 25 runtime